header and footer mobile styles completed

--- a/src/index.html
+++ b/src/index.html
@@ -9,31 +9,62 @@
     <title>My Team Page</title>
   </head>
   <body>
-    <div class="welcome">
-      <div class="welcome-text">
-        <h1>
-          Welcome to
-          <a href="https://devchallenges.io/" target="_blank">devchallenges.io</a>
-        </h1>
-
-        <p>
-          If you have any questions, don't hesitate to ask on Discord. Here are 7 general steps to
-          complete the challenge:
-        </p>
-      </div>
-
-      <ul>
-        <li><b>Step 1:</b> Create a new repository on github</li>
-        <li><b>Step 2:</b> Copy resources, README.md to your repository</li>
-        <li><b>Step 3:</b> Login to Figma to checkout font, color, spacing,..</li>
-        <li><b>Step 4:</b> Complete all user stories</li>
-        <li><b>Step 5:</b> Update README.md</li>
-        <li><b>Step 6:</b> Deploy your app and submit your solution</li>
-        <li>
-          <b>Step 7:</b> Share your solution on Discord, Twitter and other platforms to ask for
-          feedback
-        </li>
-      </ul>
+    <div class="container">
+      <header class="header">
+        <h1 class="header__title">The creative crew</h1>
+        <div class="header__who">
+          <h2 class="header__who-title">Who we are</h2>
+          <p>
+            We are a team of creatively diverse, driven, innovative individuals working in various
+            locations from around the world.
+          </p>
+        </div>
+      </header>
+      <main class="content">
+        <div class="card">
+          <div class="card__image">
+            <img src="./assets/images/photo1.png" alt="Product Owner" />
+            <aside>Product Owner</aside>
+          </div>
+          <h2 class="card__name">Bill Mahoney</h2>
+        </div>
+        <div class="card">
+          <div class="card__image">
+            <img src="./assets/images/photo2.png" alt="Art Director" />
+            <aside>Art Director</aside>
+          </div>
+          <h2 class="card__name">Saba Cabrera</h2>
+        </div>
+        <div class="card">
+          <div class="card__image">
+            <img src="./assets/images/photo3.png" alt="Tech Lead" />
+            <aside>Tech Lead</aside>
+          </div>
+          <h2 class="card__name">Shae Le</h2>
+        </div>
+        <div class="card">
+          <div class="card__image">
+            <img src="./assets/images/photo4.png" alt="UX Designer" />
+            <aside>UX Designer</aside>
+          </div>
+          <h2 class="card__name">Skylah Lu</h2>
+        </div>
+        <div class="card">
+          <div class="card__image">
+            <img src="./assets/images/photo5.png" alt="Developer" />
+            <aside>Developer</aside>
+          </div>
+          <h2 class="card__name">Griff Richards</h2>
+        </div>
+        <div class="card">
+          <div class="card__image">
+            <img src="./assets/images/photo6.png" alt="Developer" />
+            <aside>Developer</aside>
+          </div>
+          <h2 class="card__name">Stan John</h2>
+        </div>
+      </main>
+      <footer class="footer">Paul Terry @ DevChallenges.io</footer>
     </div>
   </body>
 </html>
