styled card component

--- a/src/index.html
+++ b/src/index.html
@@ -22,44 +22,44 @@
       </header>
       <main class="content">
         <div class="card">
-          <div class="card__image">
-            <img src="./assets/images/photo1.png" alt="Product Owner" />
-            <aside>Product Owner</aside>
+          <div class="card__profile">
+            <img class="card__profile-image" src="./assets/images/photo1.png" alt="Product Owner" />
+            <aside class="card__profile-job">Product Owner</aside>
           </div>
           <h2 class="card__name">Bill Mahoney</h2>
         </div>
         <div class="card">
-          <div class="card__image">
-            <img src="./assets/images/photo2.png" alt="Art Director" />
-            <aside>Art Director</aside>
+          <div class="card__profile">
+            <img class="card__profile-image" src="./assets/images/photo2.png" alt="Art Director" />
+            <aside class="card__profile-job">Art Director</aside>
           </div>
           <h2 class="card__name">Saba Cabrera</h2>
         </div>
         <div class="card">
-          <div class="card__image">
-            <img src="./assets/images/photo3.png" alt="Tech Lead" />
-            <aside>Tech Lead</aside>
+          <div class="card__profile">
+            <img class="card__profile-image" src="./assets/images/photo3.png" alt="Tech Lead" />
+            <aside class="card__profile-job">Tech Lead</aside>
           </div>
           <h2 class="card__name">Shae Le</h2>
         </div>
         <div class="card">
-          <div class="card__image">
-            <img src="./assets/images/photo4.png" alt="UX Designer" />
-            <aside>UX Designer</aside>
+          <div class="card__profile">
+            <img class="card__profile-image" src="./assets/images/photo4.png" alt="UX Designer" />
+            <aside class="card__profile-job">UX Designer</aside>
           </div>
           <h2 class="card__name">Skylah Lu</h2>
         </div>
         <div class="card">
-          <div class="card__image">
-            <img src="./assets/images/photo5.png" alt="Developer" />
-            <aside>Developer</aside>
+          <div class="card__profile">
+            <img class="card__profile-image" src="./assets/images/photo5.png" alt="Developer" />
+            <aside class="card__profile-job">Developer</aside>
           </div>
           <h2 class="card__name">Griff Richards</h2>
         </div>
         <div class="card">
-          <div class="card__image">
-            <img src="./assets/images/photo6.png" alt="Developer" />
-            <aside>Developer</aside>
+          <div class="card__profile">
+            <img class="card__profile-image" src="./assets/images/photo6.png" alt="Developer" />
+            <aside class="card__profile-job">Developer</aside>
           </div>
           <h2 class="card__name">Stan John</h2>
         </div>
