--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <h1 class="header__title">The creative crew</h1>
         <div class="header__who">
           <h2 class="header__who-title">Who we are</h2>
-          <p>
+          <p class="header__who-content">
             We are a team of creatively diverse, driven, innovative individuals working in various
             locations from around the world.
           </p>
